# zsc-ov2-lab

./: .gitignore  README.md  연구일지.txt
.github/: copilot-instructions.md
experiments/: Dockerfile  EXPERIMENT_SETTINGS.md  Makefile  README_metrics.md  experiments_original_hp.py  generate_summary.py  pyproject.toml  summary_sp_xp.csv
experiments/backup_folders/overcooked_v2_experiments/eval/: rollout.py
experiments/backup_folders/overcooked_v2_experiments/helper/: layout.py  plots.py
experiments/backup_folders/overcooked_v2_experiments/obl/: belief.py  main.py
experiments/backup_folders/overcooked_v2_experiments/ppo/: ippo.py  main.py  panic_utils.py  policy.py  run.py  state_sample_run.py  tune.py
experiments/overcooked_v2_experiments/eval/: evaluate.py  policy.py  rollout.py  utils.py
experiments/overcooked_v2_experiments/human_rl/human/: data_processing_utils.py
experiments/overcooked_v2_experiments/human_rl/imitation/: bc_policy.py  utils.py
experiments/overcooked_v2_experiments/ppo/: ippo.py  main.py  policy.py  run.py  state_sample_run.py
experiments/overcooked_v2_experiments/utils/: utils.py
experiments/requirements/: requirements.txt
experiments/sh_scripts/: c.sh  process_folders.sh  run_factory.sh  run_factory_e3t.sh  run_factory_fcp.sh  run_factory_op.sh  run_factory_psp.sh  run_factory_sa.sh  run_factory_sp.sh  run_factory_st.sh  run_factory_stl.sh  run_factory_ucoc.sh  run_factory_ucoc2.sh  run_factory_ucoc3.sh  run_user_wandb.sh  run_visualize.sh  train_bc.sh  viz_factory-ucoc.sh  viz_factory-ucoc2.sh  viz_factory.sh  viz_helper.sh
skill-experiments/: Dockerfile  Dockerfile.dockerignore  Makefile  experiments_original_hp.py  pyproject.toml
skill-experiments/sh_scripts/: README.md  c.sh  copy_fcp.sh  rename_fcp.sh  run_factory_diayn.sh  run_user_wandb.sh  run_visualize.sh  train_bc.sh  viz_helper.sh  viz_tra_factory.sh
skill-experiments/skill_ov2_experiments/eval/: __init__.py  evaluate.py  policy.py  rollout.py
skill-experiments/skill_ov2_experiments/helper/: interactive.py
skill-experiments/skill_ov2_experiments/obl/: main.py
skill-experiments/skill_ov2_experiments/ppo/: diayn.py  ippo.py  main.py  policy.py  run.py  state_sample_run.py  tune.py
skill-experiments/utils/: summary_utils.py
(+75 files in other folders)
