
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['skill_ov2_experiments*']

[tool.setuptools.dynamic]
version = {attr = "skill_ov2_experiments.__version__"}
dependencies = {file = ["requirements/requirements.txt"]}

[project]
name = "skill_ov2_experiments"
readme = "README.md"
description = "skill_ov2_experiments"
authors = [
    {name = "Foerster Lab for AI Research", email = "tobias@robots.ox.ac.uk"},
  ]
dynamic = ["version", "dependencies"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

